[gd_scene load_steps=10 format=2]

[ext_resource path="res://demos/bomber/head/monkey_head.tscn" type="PackedScene" id=1]
[ext_resource path="res://demos/bomber/HUD/PlayerHUD.gd" type="Script" id=2]
[ext_resource path="res://demos/bomber/HUD/glove_icon/glove-icon-0006.png" type="Texture" id=3]
[ext_resource path="res://demos/bomber/HUD/HUDicon.tscn" type="PackedScene" id=4]
[ext_resource path="res://demos/bomber/HUD/glove_icon/glove-icon-0002.png" type="Texture" id=5]
[ext_resource path="res://demos/bomber/HUD/glove_icon/glove-icon-0000.png" type="Texture" id=6]
[ext_resource path="res://demos/bomber/HUD/glove_icon/glove-icon-0004.png" type="Texture" id=7]
[ext_resource path="res://demos/bomber/HUD/glove_icon/glove-icon-0008.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[node name="PlayerHUD" type="Control"]
margin_right = 200.0
margin_bottom = 160.0
rect_min_size = Vector2( 200, 160 )
rect_pivot_offset = Vector2( 380, 129 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="HeadSprite" parent="." instance=ExtResource( 1 )]
margin_left = -109.0
margin_top = -90.0
margin_right = 11.0
margin_bottom = 30.0

[node name="PunchIcon" parent="." instance=ExtResource( 4 )]
position = Vector2( 119, 85 )
frames = SubResource( 1 )
frame = 2

[node name="BombIcon" parent="." instance=ExtResource( 4 )]
position = Vector2( 152, 37 )
frame = 3
